# Head_soccer_game

./: .gitignore  CMakeLists.txt  MP_project.code-workspace  OpenGL_Notes.txt  README.md
doxygen/latex/: 3_821_80_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  3_821_80_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  3_823_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  3_823_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  __features_8hpp.tex  __features_8hpp_source.tex  __fixes_8hpp.tex  __fixes_8hpp_source.tex  __noise_8hpp.tex  __noise_8hpp_source.tex  __swizzle_8hpp.tex  __swizzle_8hpp_source.tex  __swizzle__func_8hpp.tex  __swizzle__func_8hpp_source.tex  __vectorize_8hpp.tex  __vectorize_8hpp_source.tex  annotated.tex  associated__min__max_8hpp.tex  associated__min__max_8hpp_source.tex  associated__min__max_8inl.tex  bit_8hpp.tex  bit_8hpp_source.tex  bit_8inl.tex  bitfield_8hpp.tex  bitfield_8hpp_source.tex  bitfield_8inl.tex  class_ball_object.eps  class_ball_object.tex  class_game.tex  class_game_object.eps  class_game_object.tex  class_resource_manager.tex  class_shader.tex  class_sprite_renderer.tex  class_texture2_d.tex  classglm_1_1compute___y_co_cg_r.tex  classglm_1_1compute___y_co_cg_r_3_01_t_00_01_q_00_01true_01_4.tex  classglm_1_1io_1_1basic__format__saver.tex  classglm_1_1io_1_1basic__state__saver.tex  classglm_1_1io_1_1format__punct.tex  (+1095 more)
include/: game.h  game_object.h
include/glad/: glad.h
src/: game.cpp  game_object.cpp  glad.c  main.cpp  sprite_renderer.cpp
